<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.ExpirationCheckerActivity">

    <TextView
        android:id="@+id/tv_welcome_expiration_checker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome_expiration_checker"
        android:textStyle="bold"
        android:padding="8dp"
        android:textSize="24sp"
        android:textColor="@color/dark_green"/>

    <Button
        android:id="@+id/btn_bread_checker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome_expiration_checker"
        android:backgroundTint="@color/dark_green"
        android:text="@string/Roti"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_fruit_checker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_bread_checker"
        android:backgroundTint="@color/dark_green"
        android:text="@string/buah_sayur"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

</RelativeLayout>